spacing fixes

--- a/Lesson3/css/large.css
+++ b/Lesson3/css/large.css
@@ -5,4 +5,7 @@
   nav a {
     font-size: 1.1rem;
   }
+  .mainlogo {
+    height: 200px;
+  }
 }
