--- a/Lesson3/css/medium.css
+++ b/Lesson3/css/medium.css
@@ -11,4 +11,7 @@
   nav a {
     font-size: 1rem;
   }
+  .mainlogo {
+    height: 200px;
+  }
 }
